--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
-    "eslint": "^8.9.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-sort-class-members": "^1.14.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.7.0-dev.20220228"
   }
