--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "flush": "rm -R ./dist",
     "build": "tsc -p . && cp -R ./src/data/yaml ./dist/data",
+    "heroku-cleanup": "patch-package",
+    "postinstall": "patch-package",
     "start": "yarn run flush && yarn run build && node ."
   },
   "author": "rsek",
@@ -19,7 +21,10 @@
     "discord-api-types": "^0.28.0",
     "discord.js": "^14.0.0-dev.1646395406.6f7a366",
     "discordx": "^10.0.0-dev.1646443270.8c9d2f69",
+    "dotenv": "^16.0.0",
     "lodash-es": "^4.17.21",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "title-case": "^3.0.3",
     "typed-regex": "^0.0.8",
     "weighted": "^1.0.0",
