--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "scripts": {
     "flush": "rm -R ./dist",
     "build": "tsc -p . && cp -R ./src/data/yaml ./dist/data",
+    "heroku-postbuild": "tsc -p . && cp -R ./src/data/yaml ./dist/data",
     "heroku-cleanup": "patch-package",
     "postinstall": "patch-package",
-    "start": "yarn run flush && yarn run build && node .",
-    "tsc": "./node_modules/typescript/bin/tsc"
+    "start": "yarn run flush && yarn run build && node ."
   },
   "author": "rsek",
   "license": "ISC",
