--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "rootDir": "src",
+    "target": "ES2020",
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "rootDir": "./src",
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node12",
     "lib": [
       "es6",
       "es2020",
@@ -36,7 +36,6 @@
     "./**/*.ts",
     "./**/*.yaml",
     "src/**/*.json",
-    "src/interactions/missChanceByActionRoll.js"
   ],
   "exclude": [
     "node_modules",
