--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "title-case": "^3.0.3",
     "ts-node": "^10.7.0",
     "typed-regex": "^0.0.8",
+    "typescript": "^4.7.0-dev.20220323",
     "weighted": "^1.0.0",
     "yamljs": "^0.3.0"
   },
@@ -45,7 +46,6 @@
     "@typescript-eslint/parser": "^5.12.1",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-sort-class-members": "^1.14.1",
-    "typescript": "^4.7.0-dev.20220308"
+    "eslint-plugin-sort-class-members": "^1.14.1"
   }
 }
