dir restructure, bestiary

--- a/game_data/bestiary/_core.yaml
+++ b/game_data/bestiary/_core.yaml
@@ -42,7 +42,7 @@ Bonshad:
     5: Acquisitive
     6: Imperious
   Description: |-
-    The Bonshad is the source of an amusing piece of trivia amongst diabolists. While it is well known that the Bonshads know the method of creating the Elixir of Shazmazm it is less well known (at least amongst impatient apprentices) that The 17th Incantation of Ignis Baxter: Bring Up What Bonshad Come contains a typo in the 5th chorus. You can imagine the embarrassment this would have caused Master Baxter had he not been tragically caught up in the Oblation Wars soon after completing his seminal work. Regardless, calling up this hook-beaked betentacled fiend without the reformed texts will see one dragged off to the bottom of the Demon Sea to work their curious mines. What a lark!
+    The Bonshad is the source of an amusing piece of trivia amongst diabolists. While it is well known that the Bonshads know the method of creating the Elixir of Shazmazm it is less well known (at least amongst impatient apprentices) that *The 17th Incantation of Ignis Baxter: Bring Up What Bonshad Come* contains a typo in the 5th chorus. You can imagine the embarrassment this would have caused Master Baxter had he not been tragically caught up in the Oblation Wars soon after completing his seminal work. Regardless, calling up this hook-beaked betentacled fiend without the reformed texts will see one dragged off to the bottom of the Demon Sea to work their curious mines. What a lark!
 Cyclops:
   Skill: 9
   Stamina: 14
