--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "troika-bot",
-  "version": "0.0.1",
-  "description": "",
+  "name": "thinking-engine",
+  "version": "0.1.0",
+  "description": "A Discord bot to assist in playing the Troika! TTRPG.",
   "main": "./dist/bot.js",
   "type": "module",
   "engines": {
@@ -12,8 +12,9 @@
   "scripts": {
     "build": "tsc --build --clean && tsc --build  --verbose .",
     "postinstall": "patch-package",
-    "start": "pm2 start dist/bot.js --name troika-bot",
-    "stop": "pm2 stop troika-bot"
+    "start": "pm2 start dist/bot.js --name \"Thinking Engine\"",
+    "stop": "pm2 stop \"Thinking Engine\"",
+    "kill": "pm2 delete \"Thinking Engine\""
   },
   "author": "rsek",
   "license": "ISC",
