--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -11,7 +11,7 @@ parserOptions:
 plugins:
   - "@typescript-eslint"
   - sort-class-members
-  # - import
+  - import
 env:
   es6: true
 extends:
@@ -157,3 +157,29 @@ rules:
     after: true
   sort-imports:
   - warn
+  - ignoreCase: true
+    ignoreDeclarationSort: true
+  import/order:
+  - warn
+  - groups:
+      - external
+      - builtin
+      - internal
+      - sibling
+      - parent
+      - index
+    # pathGroups:
+      # - pattern: components
+      #   group: internal
+      # - pattern: common
+      #   group: internal
+      # - pattern: routes/ **
+      #   group: internal
+      # - pattern: assets/**
+      #   group: internal
+      #   position: after
+    pathGroupsExcludedImportTypes:
+      - internal
+    alphabetize:
+      order: asc
+      caseInsensitive: true
