--- a/game_data/tables/_core-oops.yaml
+++ b/game_data/tables/_core-oops.yaml
@@ -1,5 +1,5 @@
 Oops!:
-  Roll: d66
+  Dice: D66
   Table:
     11: There is a flash followed by a shriek — the wizard is now a pig.
     12: Twenty-five years of the wizard’s life drop away in an instant, possibly making them a very small child. If the wizard is younger than twenty-five they disappear into cosmic pre-birth.
